0.06
    - Tell the user when we don't know enough to generate a reply
    - Use Hailo_args in SYNOPSIS example so that it works out of the box

0.05 Thu Feb 11 21:06:49 GMT 2010
    - Forgot to apply the aforementioned fix to irchailo-seed too

0.04 Thu Feb 11 20:55:19 GMT 2010
    - When we're addressed, trim some whitespace after the nickname

0.03 Sun Jan 31 05:03:40 GMT 2010
    - Just some Pod fixes

0.02 Fri Jan 29 02:43:28 GMT 2010
    - Remove call to decode(). It's not needed, so we were double-encoding

0.01 Fri Jan 29 00:47:53 GMT 2010
    - First CPAN release