@@ -86,36 +86,45 @@ sub hailo_learn_replied {
 }
 
 sub _ignoring_user {
-    my ($self, $user, $chan) = @_;
+    my ($self, $user) = @_;
     
     if ($self->{Ignore_masks}) {
         my $mapping = $self->{irc}->isupport('CASEMAPPING');
         return 1 if keys %{ matches_mask_array($self->{Ignore_masks}, [$user], $mapping) };
     }
 
-    # abuse protection
+    return;
+}
+
+sub _ignoring_abuser {
+    my ($self, $user, $chan) = @_;
+
     my $key = "$user $chan";
     my $last_time = delete $self->{abusers}->{$key};
     $self->{abusers}->{$key} = time;
+
     return 1 if $last_time && (time - $last_time < $self->{Abuse_interval});
-    
     return;
 }
 
 sub _msg_handler {
     my ($self, $kernel, $type, $user, $chan, $what) = @_[OBJECT, KERNEL, ARG0..$#_];
+    my $nick = $self->{irc}->nick_name();
 
-    return if $self->_ignoring_user($user, $chan);
+    return if $self->_ignoring_user($user);
     $what = _normalize_irc($what);
 
     # should we reply?
     my $event = 'learn';
-    my $nick = $self->{irc}->nick_name();
     if ($self->{Own_channel} && (l_irc($chan) eq l_irc($self->{Own_channel}))
         || $type eq 'public' && $what =~ s/^\s*\Q$nick\E[:,;.!?~]?\s//i
         || $self->{Talkative} && $what =~ /\Q$nick/i)
     {
         $event = 'learn_reply';
+    }
+
+    if ($event eq 'learn_reply' && $self->_ignoring_abuser($user, $chan)) {
+        $event = 'learn';
     }
 
     if ($self->{Ignore_regexes}) {
